# ATP_incident

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  ConsolePlayer.cpp  ConsolePlayer.h  Displayer.cpp  Displayer.h  GUI_Interface.h  GameMaster.cpp  GameMaster.h  Global_Settings.h  Player.h  Player_Settings.h  Position.cpp  Position.h  README.md  Settings.cpp  Settings.h  Ship and Cell.cpp  Ship and Cell.h  Ship.cpp  Ship.h  Simplest_GUI.cpp  Simplest_GUI.h  main.cpp
ConsoleLibrary/: CMakeLists.txt  ConsoleDisplayer.cpp  ConsoleDisplayer.h  Displayer.h  Library_Testing.cpp
src/: main.cpp
src/GUI/: GUI.h  GUIInterface.h  SimplestGUI.cpp  SimplestGUI.h
src/GUI/ExternalGUI/: ButtonBase.cpp  ButtonBase.h  DisplayableBoard.cpp  DisplayableBoard.h  ExternalGUI.cpp  ExternalGUI.h  InputField.cpp  InputField.h  TextButton.cpp  TextButton.h
src/board/: Board.cpp  Board.h  BoardBuilder.cpp  BoardBuilder.h  Cell.cpp  Cell.h  Position.cpp  Position.h  RectangleBoard.cpp  RectangleBoard.h
src/event_loop/: GameMaster.cpp  GameMaster.h
src/game_master/: GameMaster.cpp  GameMaster.h
src/menu_displayer/: MenuDisplayer.cpp  MenuDisplayer.h
src/player/: ConsolePlayer.cpp  ConsolePlayer.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  PlayerFactory.cpp  PlayerFactory.h
src/player/bot/: Bot.cpp  Bot.h  GodBot.cpp  GodBot.h  RookieBot.cpp  RookieBot.h  VeteranBot.cpp  VeteranBot.h
src/settings/: GlobalSettings.cpp  GlobalSettings.h  PlayerSettings.h  Setting.cpp  Setting.h
src/ship/: Ship.cpp  Ship.h  ShipFactory.cpp  ShipFactory.h  SimpleShip.cpp  SimpleShip.h
